@@ -286,12 +286,12 @@ class TextSummaryTestCase extends DrupalWebTestCase {
     // And using a text format WITH the line-break and htmlcorrector filters.
     $expected_lb = array(
       "<p>\nHi\n</p>\n<p>\nfolks\n<br />\n!\n</p>",
-      "<",
-      "<p",
-      "<p></p>",
-      "<p></p>",
-      "<p></p>",
-      "<p></p>",
+      "",
+      "<p />",
+      "<p />",
+      "<p />",
+      "<p />",
+      "<p />",
       "<p>\nHi</p>",
       "<p>\nHi</p>",
       "<p>\nHi</p>",
