@@ -757,74 +757,21 @@ function _filter_url($text, $format) {
  * Scan input and make sure that all HTML tags are properly closed and nested.
  */
 function _filter_htmlcorrector($text) {
-  // Prepare tag lists.
-  static $no_nesting, $single_use;
-  if (!isset($no_nesting)) {
-    // Tags which cannot be nested but are typically left unclosed.
-    $no_nesting = drupal_map_assoc(array('li', 'p'));
+  // Ignore warnings during HTML soup loading.
+  $htmlDom = @DOMDocument::loadHTML('<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head><body>' . $text . '</body></html>');
 
-    // Single use tags in HTML4
-    $single_use = drupal_map_assoc(array('base', 'meta', 'link', 'hr', 'br', 'param', 'img', 'area', 'input', 'col', 'frame'));
+  // The result of DOMDocument->saveXML($bodyNode) is a partial (X)HTML document.
+  // We only need what is inside the body tag.
+  $bodyNode = $htmlDom->getElementsByTagName('body')->item(0);
+  if (preg_match("|^<body[^>]*>(.*)</body>$|s", $htmlDom->saveXML($bodyNode), $matches)) {
+    $body_content = $matches[1];
+    // The XHTML guidelines recommend to include a space before the trailing /
+    // and > of empty elements for better rendering on HTML user agents.
+    return preg_replace('|<([^>]*)/>|i', '<$1 />', $body_content);
   }
-
-  // Properly entify angles.
-  $text = preg_replace('!<([^a-zA-Z/])!', '&lt;\1', $text);
-
-  // Split tags from text.
-  $split = preg_split('/<([^>]+?)>/', $text, -1, PREG_SPLIT_DELIM_CAPTURE);
-  // Note: PHP ensures the array consists of alternating delimiters and literals
-  // and begins and ends with a literal (inserting $null as required).
-
-  $tag = FALSE; // Odd/even counter. Tag or no tag.
-  $stack = array();
-  $output = '';
-  foreach ($split as $value) {
-    // Process HTML tags.
-    if ($tag) {
-      list($tagname) = explode(' ', strtolower($value), 2);
-      // Closing tag
-      if ($tagname{0} == '/') {
-        $tagname = substr($tagname, 1);
-        // Discard XHTML closing tags for single use tags.
-        if (!isset($single_use[$tagname])) {
-          // See if we possibly have a matching opening tag on the stack.
-          if (in_array($tagname, $stack)) {
-            // Close other tags lingering first.
-            do {
-              $output .= '</' . $stack[0] . '>';
-            } while (array_shift($stack) != $tagname);
-          }
-          // Otherwise, discard it.
-        }
-      }
-      // Opening tag
-      else {
-        // See if we have an identical 'no nesting' tag already open and close it if found.
-        if (count($stack) && ($stack[0] == $tagname) && isset($no_nesting[$stack[0]])) {
-          $output .= '</' . array_shift($stack) . '>';
-        }
-        // Push non-single-use tags onto the stack
-        if (!isset($single_use[$tagname])) {
-          array_unshift($stack, $tagname);
-        }
-        // Add trailing slash to single-use tags as per X(HT)ML.
-        else {
-          $value = rtrim($value, ' /') . ' /';
-        }
-        $output .= '<' . $value . '>';
-      }
-    }
-    else {
-      // Passthrough all text.
-      $output .= $value;
-    }
-    $tag = !$tag;
+  else {
+    return '';
   }
-  // Close remaining tags.
-  while (count($stack) > 0) {
-    $output .= '</' . array_shift($stack) . '>';
-  }
-  return $output;
 }
 
 /**
